syncevolution (1:1.2.2-1) unstable; urgency=low

  * SyncEvolution 1.2.2 for Maemo.

 -- Ove Kaaven <ovek@arcticnet.no>  Mon, 23 Jan 2012 23:19:33 +0100

syncevolution (1:1.2.1-1) unstable; urgency=low

  * SyncEvolution 1.2.1 for Maemo.
  * Merged from Harmattan branch (irrelevant on Fremantle):
    - Updated KCalExtended and QtContacts backends for new
      insertItem() signature.

 -- Ove Kaaven <ovek@arcticnet.no>  Mon, 28 Nov 2011 22:40:09 +0100

syncevolution (1:1.2.0-3) unstable; urgency=low

  * Applied a couple of fixes from upstream to the recurrence
    exception conversion stuff.

 -- Ove Kaaven <ovek@arcticnet.no>  Sun, 20 Nov 2011 19:19:24 +0100

syncevolution (1:1.2.0-2) unstable; urgency=low

  * Switch to OpenSSL version of libneon.

 -- Ove Kaaven <ovek@arcticnet.no>  Tue, 08 Nov 2011 21:25:47 +0100

syncevolution (1:1.2.0-1) unstable; urgency=low

  * SyncEvolution 1.2 for Maemo.
  * Convert iCalendar 2.0 recurrence exceptions to a format
    that the Maemo 5 calendar-backend can understand.
  * And convert back to iCalendar 2.0 format when needed.

 -- Ove Kaaven <ovek@arcticnet.no>  Tue, 08 Nov 2011 19:45:00 +0100

syncevolution (1:1.1.99.7-1) unstable; urgency=low

  * SyncEvolution 1.1.99.7 for Maemo.
  * Removed static libraries.
  * Merged from Harmattan branch (irrelevant on Fremantle):
    - Added Aegis manifest for Harmattan.
    - On Harmattan, re-enable iCal 2.0 UID comparisons.
    - On Harmattan, don't try to sync the fake "self" contact.

 -- Ove Kaaven <ovek@arcticnet.no>  Mon, 19 Sep 2011 18:26:59 +0200

syncevolution (1:1.1.99.6-1) unstable; urgency=low

  * SyncEvolution 1.1.99.6 for Maemo.

 -- Ove Kaaven <ovek@arcticnet.no>  Sun, 04 Sep 2011 20:42:32 +0200

syncevolution (1:1.1.99.5-1) unstable; urgency=low

  * SyncEvolution 1.1.99.5 for Maemo.
    - Built with WebDAV support.
  * Build-Depend on libneon27-gnutls-dev.
  * Depend on host (used by WebDAV backend for DNS SRV lookups).
  * Updated package description: