@@ -36,6 +36,8 @@
 #include <QContactLocalIdFilter>
 #include <QContactThumbnail>
 #include <QContactAvatar>
+#include <QContactSyncTarget>
+#include <QContactDetailFilter>
 
 #include <QVersitContactExporter>
 #include <QVersitContactImporter>
@@ -422,9 +424,21 @@ QtContactsSource::Databases QtContactsSource::getDatabases()
 {
     Databases result;
     QStringList availableManagers = QContactManager::availableManagers();
+    bool isDefault = true;
 
+#if 0
     result.push_back(Database("select database via QtContacts Manager URL",
                               "qtcontacts:tracker:"));
+#endif
+
+    foreach (QString manager, availableManagers) {
+        QMap<QString, QString> params;
+        QString uri = QContactManager::buildUri(manager, params);
+        result.push_back(Database(manager.toStdString(),
+                                  uri.toStdString(),
+                                  isDefault));
+        isDefault = false;
+    }
     return result;
 }
 
@@ -436,6 +450,15 @@ void QtContactsSource::listAllItems(RevisionMap_t &revisions)
 
     QContactFetchRequest fetch;
     fetch.setManager(m_data->m_manager.get());
+
+#ifdef ENABLE_MAEMO
+    // only sync contacts from addressbook, not from Telepathy or wherever
+    QContactDetailFilter filter;
+    filter.setDetailDefinitionName(QContactSyncTarget::DefinitionName, QContactSyncTarget::FieldSyncTarget);
+    filter.setValue("addressbook");
+    filter.setMatchFlags(QContactFilter::MatchExactly);
+    fetch.setFilter(filter);
+#endif
 
     // only need ID and time stamps
     QContactFetchHint hint;
@@ -489,6 +512,10 @@ void QtContactsSource::readItem(const string &uid, std::string &item, bool raw)
             thumbnail.setThumbnail(image);
             contact.saveDetail(&thumbnail);
         }
+
+//        foreach (const QContactSyncTarget &target, contact.details<QContactSyncTarget>()) {
+//            std::cout << " Sync Target: " << target.syncTarget().toUtf8().data() << std::endl;
+//        }
     }
 
     QStringList profiles;
